[gd_scene load_steps=10 format=3 uid="uid://5iclcc2smej6"]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_oppev"]
[ext_resource type="Resource" uid="uid://ble1niic6eqcy" path="res://system/resources/player_action_list.tres" id="2_hbaqi"]
[ext_resource type="SpriteFrames" uid="uid://brfsjyrtd0uoi" path="res://entities/player/player_animation.tres" id="2_wmoqf"]
[ext_resource type="PackedScene" uid="uid://cs5sh1ihbkv1c" path="res://modules/HealthModule.tscn" id="3_4nbfh"]
[ext_resource type="Script" path="res://entities/player/player_move_hsm.gd" id="6_1fvid"]
[ext_resource type="PackedScene" uid="uid://6mwr5hgf6ldk" path="res://entities/abilities/movement/states/airHSM.tscn" id="7_e0gvk"]
[ext_resource type="PackedScene" uid="uid://duyl76sc706qk" path="res://entities/abilities/movement/states/groundHSM.tscn" id="7_sgfo2"]
[ext_resource type="PackedScene" uid="uid://cks5h065gwsgc" path="res://entities/abilities/movement/actions/JumpState.tscn" id="8_ij38j"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_g35ie"]
radius = 19.1004
height = 146.207

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("health_mod")]
scale = Vector2(0.2, 0.2)
collision_layer = 16
collision_mask = 199
script = ExtResource("1_oppev")
action_list = ExtResource("2_hbaqi")
health_mod = NodePath("HealthModule")
max_health = 200
speed = 1000

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -102.529)
scale = Vector2(0.2, 0.2)
sprite_frames = ExtResource("2_wmoqf")

[node name="Hurtbox" type="CollisionShape2D" parent="."]
position = Vector2(9.16273, -73.1034)
scale = Vector2(0.999999, 0.999999)
shape = SubResource("CapsuleShape2D_g35ie")

[node name="HealthModule" parent="." node_paths=PackedStringArray("soul") instance=ExtResource("3_4nbfh")]
soul = NodePath("..")

[node name="PlayerMoveHSM" type="LimboHSM" parent="."]
script = ExtResource("6_1fvid")

[node name="GroundHSM" parent="PlayerMoveHSM" instance=ExtResource("7_sgfo2")]

[node name="AirHSM" parent="PlayerMoveHSM" instance=ExtResource("7_e0gvk")]
accel_time = 0.25
decel_rate = 0.9
jumps = 3
jump_height = 25.0
jump_peak_time = 0.4
jump_fall_time = 0.3
min_jump_time = 0.15

[node name="JumpState" parent="PlayerMoveHSM/AirHSM" instance=ExtResource("8_ij38j")]
